--- a/show/dance2008/readme
+++ b/show/dance2008/readme
@@ -36,11 +36,22 @@ rename :showPath to something about mpd
 right amount of connection logging on asco
 
 port togl to pyglet, perhaps?
+
+map some buttons to the worklights, etc. Maybe midi board buttons? keypad? wii?
+
 rename :showPath to something about mpd
 
 
 
-rename :showPath to something about mpd
+packing list:
+  power strips
+  computers, bcf, dmx
+  dmx cables
+  external mouses, keyboards
+  wrench, tape
+  blank CDs
+  
+
 
 
 
