--- a/show/dance2008/readme
+++ b/show/dance2008/readme
@@ -1,10 +1,10 @@
 preshow:
 
-test sliders on plus
+OK test sliders on plus
 
-copy past PHS lighting config to dance2008
+OK copy past PHS lighting config to dance2008
 
-make up/bow/down curves for all songs
+OK make up/bow/down curves for all songs
 
 OK make music curves
 
