--- a/show/dance2008/readme
+++ b/show/dance2008/readme
@@ -101,3 +101,11 @@ next time:
 
   bug where empty sub doesn't save from SC
 
+  in KC, exclude house lights from being saved in any subs
+
+  bring 500W bulbs
+
+  record-everything mode that makes curves out of whatever happens on stage
+
+  asco makes lots of errors after you play through the last song
+
