--- a/show/dance2008/readme
+++ b/show/dance2008/readme
@@ -103,9 +103,11 @@ next time:
 
   in KC, exclude house lights from being saved in any subs
 
-  bring 500W bulbs
+  bring 500W bulbs, wire strippers
 
   record-everything mode that makes curves out of whatever happens on stage
 
   asco makes lots of errors after you play through the last song
+
+  five second post
 
