checkpoint - end of first day
darcs-hash:20080614065644-312f9-9ea65267a90414bafb255658502a71287a34472c.gz

--- a/show/dance2008/readme
+++ b/show/dance2008/readme
@@ -78,6 +78,8 @@ issues to note during the show:
 
  light flickers?
 
+better sound cables
+
 
 next time:
 
@@ -111,3 +113,8 @@ next time:
 
   five second post
 
+  KC should have a separate window that repeats the names of the subs
+  in the current row, numbered as hardware sliders. This would be put
+  on the screen where it's always visible, when KC is hidden
+
+  subterms on nonexistent subs are getting lost, but i need those for chase and effects
