--- a/show/dance2008/readme
+++ b/show/dance2008/readme
@@ -118,3 +118,6 @@ next time:
   on the screen where it's always visible, when KC is hidden
 
   subterms on nonexistent subs are getting lost, but i need those for chase and effects
+
+  subcomposer should save its geometry
+
