--- a/show/dance2008/readme
+++ b/show/dance2008/readme
@@ -134,3 +134,10 @@ ascoltami should learn to adjust volumes
 
 unnamed subterm is serious. i think only the last one created gets
 saved, or something
+
+KC smaller font on labels should allow bigger sliders
+
+curvecalc_all_subterms needs redo
+
+touched dmx cable; ~/dmxcrash in dmesg; process went to 'D' status; rebooted
+
