--- a/show/dance2008/readme
+++ b/show/dance2008/readme
@@ -140,7 +140,7 @@ OK  curvecalc should always start up zoomed-out
   unnamed subterm is serious. i think only the last one created gets
   saved, or something
 
-  KC smaller font on labels should allow bigger sliders
+OK  KC smaller font on labels should allow bigger sliders
 
   curvecalc_all_subterms needs redo
 
