fix bogus asco error after last song. Untested.
darcs-hash:20080616003730-312f9-619cc787cf10e9f08699c3eacd298536fe97087d.gz

--- a/show/dance2008/readme
+++ b/show/dance2008/readme
@@ -113,7 +113,7 @@ next time:
 
   record-everything mode that makes curves out of whatever happens on stage
 
-  asco makes lots of errors after you play through the last song
+OK  asco makes lots of errors after you play through the last song
 
   five second post
 
