--- a/show/dance2009/readme
+++ b/show/dance2009/readme
@@ -7,4 +7,16 @@ dmxserver needs rmmod ftdo_sio; insmod dmx_usb_module/dmx_usb.ko
 
 
 
+song5 paris too loud
 
+
+
+    b36 get off stage lip, stay cross
+
+    post-l broken
+
+
+    buy backwrap
+
+    subcomposer rename channels
+    keyboardcomposer colored sub troughs
