--- a/show/dance2009/readme
+++ b/show/dance2009/readme
@@ -163,3 +163,6 @@ OK  mute for curves in curvecalc
     curvecalc disable slider output for reading input better
     add silence to songs instead of silence bookend sounds?
     be able to mute sliders
+
+    order all food ahead of time
+    local wifi and web client: play song, stop music, add work lights, test dimmer
