--- a/show/dance2009/readme
+++ b/show/dance2009/readme
@@ -166,3 +166,5 @@ OK  mute for curves in curvecalc
 
     order all food ahead of time
     local wifi and web client: play song, stop music, add work lights, test dimmer
+    do song-end fades by hand instead of in curvecalc
+
