--- a/show/dance2009/readme
+++ b/show/dance2009/readme
@@ -1,3 +1,6 @@
+also see http://drewp.quickwitretort.com/2009/06/25/0
+
+
 needed modprobe snd-usb-audio to find the sliders
 
 try running two KCs, one just for house lights
