--- a/show/dance2010/readme
+++ b/show/dance2010/readme
@@ -36,3 +36,8 @@ once, and then update all their paths to the new pad/ directory.
 
 THEN run bin/wavecurve
 
+todo:
+make new CDs with corrected songs
+sync songs across computers
+test dmx dongle, sliders box, sound playback
+
