--- a/show/dance2010/readme
+++ b/show/dance2010/readme
@@ -60,3 +60,14 @@ for 2011:
 - remote-run GUIs should say what machine they're on. Or, everyone should say what RDF server it's talking tox
 - scrub inside curvecalc, preview a video in it
 - bring curvecalc's logging inside the GUI window
+- vidref stopped here once:
+        File "/usr/lib/python2.6/threading.py", line 484, in run
+          self.__target(*self.__args, **self.__kwargs)
+        File "/home/drewp/projects/light9/light9/vidref/main.py", line 54, in _timeUpdate
+          position = jsonlib.loads(self.musicResource.get("time").body,
+        File "/usr/local/lib/python2.6/dist-packages/restkit-1.3.1-py2.6.egg/restkit/resource.py", line 135, in get
+          return self.request("GET", path=path, headers=headers, **params)
+        File "/usr/local/lib/python2.6/dist-packages/restkit-1.3.1-py2.6.egg/restkit/resource.py", line 231, in request
+          raise RequestError(e)
+      RequestError: [Errno 111] Connection refused
+- asco stops considerably after the autostop time (according to curvecalc)
