--- a/show/dance2010/readme
+++ b/show/dance2010/readme
@@ -73,3 +73,33 @@ for 2011:
 - asco stops considerably after the autostop time (according to curvecalc)
 - CC should support zoom-crushing towards the left as well
 - vidref's replay 'enabled' button should be completely sticky across sessions
+
+
+#3: 306 horns- strobe.
+255 light the sides. r first
+
+4 louder
+
+#5 test blacklight
+
+#7 
+start cyc, with just 5
+245 light change as they turn
+
+#8 test BL
+
+10 louder
+
+#11 test BL
+112 strobe? with the sound effect
+180 challenge R then L
+191 busy before the end, then light their line
+
+14 test BL
+146 darker before kick line, so we can get brighter on it at this time
+
+16 softer beginning
+587 strobe to 595
+655 fade as they sit
+
+
