--- a/show/dance2010/readme
+++ b/show/dance2010/readme
@@ -106,6 +106,7 @@ start cyc, with just 5
 112 strobe? with the sound effect
 180 challenge R then L
 191 busy before the end, then light their line
+-  2nd req for BL
 
 #14 test BL
 146 darker before kick line, so we can get brighter on it at this time
