--- a/show/dance2010/readme
+++ b/show/dance2010/readme
@@ -86,6 +86,8 @@ for 2011:
      AttributeError: 'NoneType' object has no attribute 'split'
 - CC subterms that are just curve(t) should not appear as rows; they should be described in their curverow
 - all machines should have this control panel: set audio output to house or local; what's the song time; scrub around in this song; switches for emergency lights; make a checkpoint (if we dont have complete history yet)
+- hardest thing is seeing an area on stage and getting light onto it. lightsim could help
+
 
 #3: 306 horns- strobe.
 255 light the sides. r first
