asco displays hostname and sends better content-type headers
Ignore-this: a25ba775fa44991c2166740410297eae

darcs-hash:20110615053223-312f9-8ed80f761fa122af5cd8e6955cf8c4ce143e3f6e.gz

--- a/show/dance2010/readme
+++ b/show/dance2010/readme
@@ -48,7 +48,7 @@ for 2011:
 - factor out music dir so it can be different per machine
 - all settings should be in RDF and live-shared across all apps, maybe with anzo for updates
 - when curvecalc says 'Slider 1', the X coordinates of the curve get misaligned
-- asco should say clearly what machine it's running on
+OK asco should say clearly what machine it's running on
 - asco should have GUI for picking which sound output you want, and store the setting
 - vidref should have snapshot button for taking pics of the stage
 - bring mini tripod or beanbag for the vidref camera
