zoom crushing fix; c-a-drag zoom fix
Ignore-this: db04ac435d4f1fe7ba8714e836ad7767

darcs-hash:20110617081714-836b1-29de470cef607892fd1b5b18a292784a99d620d5.gz

--- a/show/dance2010/readme
+++ b/show/dance2010/readme
@@ -71,7 +71,7 @@ OK curvecalc still has a problem making empty-name subterms. that should never h
           raise RequestError(e)
       RequestError: [Errno 111] Connection refused
 - asco stops considerably after the autostop time (according to curvecalc)
-- CC should support zoom-crushing towards the left as well
+OK CC should support zoom-crushing towards the left as well
 - vidref's replay 'enabled' button should be completely sticky across sessions
 - audio process pipeline; RDF graph should track versions of songs (padded, normalized)
 OK vidref can loop like this if asco goes down:
